<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_home_xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myGray">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/image_bar_two"
        android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/learnStatisticsItemOne"
                android:text="@string/learnStatisticsItemOneText"
                android:drawableTop="@drawable/logo_learning_statistics"
                android:textColor="@color/myBlue"
                style="@style/learnStatisticsItemTheme" />
            <TextView
                android:id="@+id/learnStatisticsItemTwo"
                android:text="@string/learnStatisticsItemTwoText"
                android:drawableTop="@drawable/logo_learned_test"
                android:textColor="@color/myOrange"
                style="@style/learnStatisticsItemTheme" />
            <TextView
                android:id="@+id/learnStatisticsItemThree"
                android:text="@string/learnStatisticsItemThreeText"
                android:drawableTop="@drawable/logo_knowledge_tip"
                android:textColor="@color/myPink"
                style="@style/learnStatisticsItemTheme" />
            <TextView
                android:id="@+id/learnStatisticsItemFour"
                android:text="@string/learnStatisticsItemFourText"
                android:drawableTop="@drawable/logo_friends_tip"
                android:textColor="@color/myGreenThree"
                style="@style/learnStatisticsItemTheme" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/myWhite"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ActivityZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:drawableLeft="@drawable/logo_learning_tool_tip"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@color/myGreenTwo"
            android:text="@string/ActivityItemText"
            />
        <TextView
            android:id="@+id/ActivityItemOne"
            android:text="@string/ActivityItemOneText"
            android:background="@color/myGreenTwo"
            style="@style/homeToolItemTheme"/>
        <TextView
            android:id="@+id/ActivityItemTwo"
            android:text="@string/ActivityItemTwoText"
            android:background="@color/myYellow"
            style="@style/homeToolItemTheme"/>
        <TextView
            android:id="@+id/ActivityItemThree"
            android:text="@string/ActivityItemThreeText"
            android:background="@color/myOrange"
            style="@style/homeToolItemTheme"/>
        <TextView
            android:id="@+id/ActivityItemFour"
            android:text="@string/ActivityItemFourText"
            android:background="@color/myPink"
            style="@style/homeToolItemTheme"/>
        <TextView
            android:id="@+id/ActivityItemFive"
            android:text="@string/ActivityItemFiveText"
            android:background="@color/myPinkTwo"
            style="@style/homeToolItemTheme"/>
    </LinearLayout>




</LinearLayout>
