<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myGray"
    >

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_below="@id/search"
        android:layout_above="@+id/menu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/child_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_item_group"
        android:text="Hello World!" >
        <RadioButton
            android:id="@+id/home"
            android:drawableTop="@drawable/menu_item_home_background"
            android:text="@string/menu_home"
            android:checked="true"
            style="@style/menuItemTheme"
            />
        <RadioButton
            android:id="@+id/course"
            android:drawableTop="@drawable/menu_item_course_background"
            android:text="@string/menu_course"
            style="@style/menuItemTheme" />
        <RadioButton
            android:id="@+id/find"
            android:drawableTop="@drawable/menu_item_find_background"
            android:text="@string/menu_find"
            style="@style/menuItemTheme" />
        <RadioButton
            android:id="@+id/mine"
            android:drawableTop="@drawable/menu_item_mine_background"
            android:text="@string/menu_mine"
            style="@style/menuItemTheme"/>
    </RadioGroup>
</RelativeLayout>
